--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,19 @@
-.App {
+.masonry {
+  margin: 16px;
   text-align: center;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(1,1fr);
+  grid-auto-rows: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.item{
+  border: .4px solid black;
+  border-radius: 8px;
+  padding: 5px 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p{
+  margin: 16px 0 0;
+  text-align: left;
 }
